# Position-Management-System

./: .gitignore  Anchor.toml  Cargo.toml  README.md  README_ADVANCED.md
Inventory-Order Flow System/src/: app.js
Inventory-Order Flow System/src/config/: db.js
Inventory-Order Flow System/src/controllers/: order.controller.js  product.controller.js
Inventory-Order Flow System/src/middlewares/: error.middleware.js  role.middleware.js
Inventory-Order Flow System/src/routes/: order.routes.js  product.routes.js
Inventory-Order Flow System/src/services/: order.service.js  product.service.js
Inventory-Order Flow System/src/utils/: ApiError.js
backend/: .env  Cargo.toml
backend/src/: errors.rs  lib.rs  models.rs
backend/src/api/: http.rs  ws.rs
backend/src/services/: manager.rs  margin.rs  oracle.rs
backend/src/solana/: client.rs
backend/tests/: integration_test.rs
docs/: architecture.md  contract.md
examples/: advanced_trading_demo.rs  buy_1_sol.rs  sol_short_15x.rs  trade_btc_20x.rs
pms/: INTERACTIVE_DEMO_GUIDE.md  LIVE_DEMO_GUIDE.md  SETUP_GUIDE.md  video_demo.rs
pms/backend/: Cargo.toml
pms/backend/src/: config.rs  health_check.rs  main.rs
pms/backend/src/services/: manager.rs  mod.rs  monitor.rs  pnl.rs
pms/backend/src/solana/: mod.rs  pda.rs
pms/docs/: backend.md  math.md  risk.md  test_results.md
pms/examples/: trade_btc_20x.rs
pms/src/: advanced_orders.rs  funding_system.rs  liquidation_engine.rs  perpetual_mechanics.rs  solana_trade.rs  trading_engine.rs
pms/src/instructions/: close_positions.rs  mod.rs
pms/src/state/: accounts.rs  mod.rs
pms/tests/: crypto_trading_scenarios.rs  integration_test.rs
sm lab/sm lab/Bug-Bounty-Simulator-Lab/: .env  README.md  app.py  requirements.txt  run.bat  test_email.py  vulnerability_db.py
sm lab/sm lab/Bug-Bounty-Simulator-Lab/instance/: bug_bounty_lab.db
sm lab/sm lab/Bug-Bounty-Simulator-Lab/static/css/: style.css
sm lab/sm lab/Bug-Bounty-Simulator-Lab/static/js/: auth.js  dashboard.js  theme.js
sm lab/sm lab/Bug-Bounty-Simulator-Lab/templates/: admin.html  base.html  dashboard.html  index.html  lab_detail.html  profile.html  recon.html  vulnerable_site.html
src/: analytics.rs  constants.rs  errors.rs  events.rs  lib.rs  main.rs  math.rs  models.rs  performance_optimizer.rs  risk_manager.rs  settlement_relayer.rs  solana_markets.rs  state_manager.rs  tiers.rs  trading_engine.rs
src/instructions/: modify_positions.rs  open_positions.rs
tests/: comprehensive_crypto_test.rs  crypto_trading_scenarios.rs
