[package]
name = "trading-system"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
rand = "0.8"

# Time + serialization
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Solana ecosystem (modern, zero conflicts)
solana-program = "1.16.18"
solana-sdk     = "1.16.18"
solana-client  = "1.16.18"

# Anchor client compat with Solana 1.16
anchor-client = "0.29.0"

# SQLX – only Postgres, no MySQL (MySQL triggers RSA/zeroize conflicts)
sqlx = { version = "0.7.4", default-features = false,features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# UUID support
uuid = { version = "1.6", features = ["v4", "serde"] }

# Local service
position-service = { path = "backend" }

[[example]]
name = "sol_short_15x"
path = "examples/sol_short_15x.rs"
