[package]
name = "trading-system"
version = "0.1.0"
edition = "2021"
default-run = "trading-system"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
rand = "0.8"

# Time + serialization
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Solana ecosystem (versions compatible with older zeroize)
solana-program = "1.14"
solana-sdk     = "1.14"
solana-client  = "1.14"

# Anchor client compat
anchor-client = "0.26"

# SQLX – use older version compatible with zeroize <1.4
sqlx = { version = "0.6", default-features = false, features = ["postgres", "sqlite", "runtime-tokio-rustls", "uuid", "chrono"] }

# UUID support
uuid = { version = "1.6", features = ["v4", "serde"] }

# Local service
position-service = { path = "backend" }

[[example]]
name = "sol_short_15x"
path = "examples/sol_short_15x.rs"

[[bin]]
name = "live_demo"
path = "src/bin/live_demo.rs"

[[bin]]
name = "interactive_demo"
path = "src/bin/interactive_demo.rs"
