[package]
name = "position-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "position_service"
path = "src/lib.rs"

[[bin]]
name = "setup_db"
path = "src/bin/setup_db.rs"

[[bin]]
name = "test_db"
path = "src/bin/test_db.rs"

[[bin]]
name = "create_db"
path = "src/bin/create_db.rs"

[[bin]]
name = "check_db"
path = "src/bin/check_db.rs"

[[bin]]
name = "db_status"
path = "src/bin/db_status.rs"

[[bin]]
name = "quick_test"
path = "src/bin/quick_test.rs"

[[bin]]
name = "create_postgres_db"
path = "src/bin/create_postgres_db.rs"

[[bin]]
name = "insert_sample_data"
path = "src/bin/insert_sample_data.rs"

[[bin]]
name = "simple_setup"
path = "src/bin/simple_setup.rs"

[[bin]]
name = "show_tables"
path = "src/bin/show_tables.rs"

[[bin]]
name = "add_position"
path = "src/bin/add_position.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_with = "3"

dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

axum = { version = "0.6", features = ["ws", "macros", "json"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# ---------- SQL ----------
sqlx = { version = "0.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }

# ---------- SOLANA/ANCHOR ----------
anchor-client = "0.26"
anchor-lang   = "0.26"

solana-sdk     = "1.14"
solana-client  = "1.14"
solana-transaction-status = "1.14"
